--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,6 +2,9 @@
   "profiles": {
     "Default": {
       "commandName": "Project",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "local"
+      },
       "applicationUrl": "http://localhost:19282"
     }
   }
