--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,8 @@
 {
-  "OpenIdConnect": {
-    "ResponseType": "code",
-    "ResponseMode": null,
-    "DisableTelemetry": true,
-    "Scope": [ "openid" ]
+  "OpenIDConnect": {
+    "issuer": "https://login.example.ubidemo.com/uas",
+    "client_id": "public",
+    "client_secret": "public",
+    "redirect_uri": "http://localhost:19282/public"
   }
 }
