--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,17 +10,19 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  solution: '**/*.sln'
-  buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
 steps:
-- task: NuGetToolInstaller@1
-
-- task: NuGetCommand@2
-  inputs:
-    restoreSolution: '$(solution)'
-
 - task: DotNetCoreCLI@2
+  name: 'AspNetCoreSample'
   inputs:
-    command: 'build'
+    command: 'publish'
+    publishWebProjects: false
+    projects: AspNetCoreSample
+    modifyOutputPath: false
+    arguments: '--configuration $(buildConfiguration) -o $(Pipeline.Workspace)/publish/AspNetCoreSample'
+- task: PublishPipelineArtifact@1
+  inputs:
+    targetPath: '$(Pipeline.Workspace)/publish/AspNetCoreSample'
+    artifact: 'AspNetCoreSample'
+    publishLocation: 'pipeline'
