--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,7 @@ steps:
 - task: AzureRmWebAppDeployment@4
   inputs:
     ConnectionType: 'AzureRM'
-    azureSubscription: 'Petteri - MSDN'
+    azureSubscription: 'Petteri - MSDN (f70471bf-4538-41e6-a84c-679ec53940ef)'
     appType: 'webApp'
     WebAppName: 'ubi-aspnet-core-sample'
     packageForLinux: '$(Pipeline.Workspace)/publish/AspNetCoreSample/**/*.zip'
