--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,25 +10,22 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
+  project: 'AspNetCoreSample'
   buildConfiguration: 'Release'
 
 steps:
 - task: DotNetCoreCLI@2
-  name: 'AspNetCoreSample'
+  displayName: 'Build'
   inputs:
     command: 'publish'
     publishWebProjects: false
     modifyOutputPath: false
-    arguments: '--configuration $(buildConfiguration) -o $(Pipeline.Workspace)/publish/AspNetCoreSample'
-- task: PublishPipelineArtifact@1
-  inputs:
-    targetPath: '$(Pipeline.Workspace)/publish/AspNetCoreSample'
-    artifact: 'AspNetCoreSample'
-    publishLocation: 'pipeline'
+    arguments: '--configuration $(buildConfiguration) -o $(Pipeline.Workspace)/publish/$(project)'
 - task: AzureRmWebAppDeployment@4
+  displayName: 'Deploy'
   inputs:
     ConnectionType: 'AzureRM'
-    azureSubscription: 'Petteri - Visual Studio 2020(8945690f-dfba-4ea2-a0fa-7bb9fc3e1e1c)'
+    azureSubscription: 'Azure DevOps'
     appType: 'webApp'
     WebAppName: 'ubi-aspnet-core-sample'
-    packageForLinux: '$(Pipeline.Workspace)/publish/AspNetCoreSample/**/*.zip'
+    packageForLinux: '$(Pipeline.Workspace)/publish/$(project)/**/*.zip'
