Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,6 @@ steps:
   inputs:
     ConnectionType: 'AzureRM'
     azureSubscription: 'Azure DevOps'
-    appType: 'webApp'
+    appType: 'webAppLinux'
     WebAppName: 'ubi-aspnet-core-sample'
     packageForLinux: '$(Pipeline.Workspace)/publish/$(project)/**/*.zip'
